Set correctly mem usage in the JVM execution